[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/montserrat_eb_14.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/icons/adjacent.png" type="Texture" id=2]
[ext_resource path="res://menu/editor/ui/assets/board.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/view.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/card.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/move.png" type="Texture" id=6]
[ext_resource path="res://menu/editor/ui/nav_option/nav_option.gd" type="Script" id=7]

[node name="nav_option" type="MarginContainer"]
margin_left = 508.0
margin_top = 312.0
margin_right = 600.0
margin_bottom = 712.0
rect_min_size = Vector2( 0, 400 )
size_flags_horizontal = 8
size_flags_vertical = 4
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 52.0
margin_right = 92.0
margin_bottom = 400.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 8
texture = ExtResource( 3 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 34.0
margin_right = 92.0
margin_bottom = 366.0
size_flags_vertical = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 80.0
margin_bottom = 332.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="btn_range" type="Button" parent="HBoxContainer/VBoxContainer2"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
pressed = true
text = "x2"
flat = true
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/VBoxContainer2/btn_range"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="btn_adjacent" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
toggle_mode = true
pressed = true
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/VBoxContainer2/btn_adjacent"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="btn_view" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 168.0
margin_right = 80.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
toggle_mode = true
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/VBoxContainer2/btn_view"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="btn_path" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 252.0
margin_right = 80.0
margin_bottom = 332.0
rect_min_size = Vector2( 80, 80 )
toggle_mode = true
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer/VBoxContainer2/btn_path"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 84.0
margin_right = 92.0
margin_bottom = 332.0
rect_min_size = Vector2( 8, 0 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/btn_range" to="." method="_on_btn_range_pressed"]
